test/libsolidity/syntaxTests/storageLayoutSpecifier/abi_decode.sol
contract C layout at abi.decode(abi.encode(42), (uint)) {}
// ----
// UnimplementedFeatureError 1834: (0-58): Code generation is not supported for contracts with specified storage layout base.
